# main2main_flow

./: .gitignore  AGENTS.md  README.md  logs.txt  main2main_flow_chat_20260704.md  main2main_flow_chat_20260714.md  pyproject.toml  test_parallel_run.py
.opencode/agents/: code_adapter.md  code_reviewer.md  patch_analyzer.md
docs/: guide.md
main2main_flow/: cli.py  flow.py  test_policy.json  utils.py
main2main_flow/agent/: opencode_adapter.py  prompt.md  prompt_fix_preci.md  review_prompt.md
main2main_flow/agents/adapter/: SKILL.md
main2main_flow/agents/adapter-qa/: SKILL.md
main2main_flow/reference/: adapt-guide.md  ascend-constraints.md  candidates.md  code-structure-guide.md  diagnosis-guide.md  error-pattern-examples.md  output-exemplars.md  review-lessons.md  upstream-ignore-paths.md  versioning-primer.md
main2main_flow/scripts/: ci_log_summary.py  detect_commits.py  plan_steps.py  pre_ci_check.py  push_to_github.py  replay_eval.py  run_tests.py  update_commit_reference.py
main2main_flow/scripts/agent/: opencode_adapter.py
main2main_flow/scripts/utils/: ci_log_summary.py  detect_commits.py  plan_steps.py  pre_ci_check.py  push_to_github.py  run_tests.py  update_commit_reference.py  utils.py
output/: post.md
src/main2main_flow/: flow.py  main.py  utils.py
src/main2main_flow/agent/: opencode_adapter.py  prompt.md
src/main2main_flow/reference/: adapt-guide.md  diagnosis-guide.md  error-pattern-examples.md
src/main2main_flow/scripts/: detect_commits.py  plan_steps.py  pre_ci_check.py  run_tests.py  (+2 more)
workspace/: detect.json  steps.json  steps.md
(+26 files in other folders)
