[project]
name = "main2main_flow"
version = "0.1.0"
description = "main2main_flow — automated vllm-ascend adaptation to upstream vLLM"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0"
]

[project.scripts]
kickoff = "main2main_flow.cli:kickoff"
plot = "main2main_flow.cli:plot"
run_with_trigger = "main2main_flow.cli:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main2main_flow"]
